cmake_minimum_required(VERSION 3.15)
project(C_Language_Proj)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Language_Proj main.cpp src/arraymin.h src/getint.h src/twopartsearch.h src/sushu.h "src/Pascal's triangle.h" "src/rolling matrix.h" src/matrixmin.h src/Palindromenumber.h "src/findnumber(twopart.h")