cmake_minimum_required(VERSION 3.15)
project(C_Language_Proj)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Language_Proj main.cpp src/arraymin.h src/getint.h src/twopartsearch.h src/sushu.h "src/Pascal's triangle.h" "src/rolling matrix.h" src/matrixmin.h src/Palindromenumber.h "src/findnumber(twopart.h" src/quicksort.h src/definitionPointer.h src/strcopy.h src/FindNumberInArray.h src/ucode.h src/dfs_boxs.h src/text1.h src/queue.h src/stack.h src/dfs_maze.h src/LeapYear.h "src/weekdate(correct.h" src/max.h src/AboutFlie.h src/text.2.h src/LinkedList.h)