cmake_minimum_required(VERSION 3.15)
project(C_Language_Proj)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Language_Proj main.cpp src/getint.h src/twoPartSearch.h src/primeNumber.h "src/Pascal's triangle.h" "src/rolling matrix.h" src/matrixmin.h src/palindromeNumber.h "src/findnumber(twopart.h" src/quickSort.h src/definitionPointer.h src/strcopy.h src/FindNumberInArray.h src/dfsBoxs.h src/text1.h src/queue.h src/dfsMaze.h src/LeapYear.h  src/max.h src/AboutFlie.h src/LinkedList.h src/5.7floorDivision.h src/paintK.h src/triangleSquare.h src/e.h src/narcissisticNum.h src/exchangeNumber.h src/mulTable.h src/sortFrombear.h src/arrayStack.h src/trianglePrint.h src/upCard.h src/Fib.h src/switchSystem.h)